<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_the_server"
    android:orientation="vertical"
    tools:context="com.example.fpl_racewaiking.LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/server_status"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_server_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/isConnecting"
            android:textColor="#808080"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_server_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/btnselector"
            android:text="@string/server_status_setting"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/judge_position"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_judge_position"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/bg_edittext"
                android:gravity="center"
                android:hint="@string/input_number"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="44dp"
                android:text="@string/judge"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_judge"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/bg_edittext"
                android:inputType="textVisiblePassword"
                android:digits="0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
                android:gravity="center"
                android:hint="@string/input"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="44dp"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/bg_edittext"
                android:gravity="center"
                android:hint="@string/input_pas"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btnselector"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="25sp" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rd_zh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/chinese"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rd_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/english"
            android:textSize="18sp" />
    </RadioGroup>

</LinearLayout>