<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#7EC0EE"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/dialog_clear_data"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/dialog_code"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_dialog_code"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edittext"
            android:numeric="integer"
            android:paddingLeft="3dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_dialog_code"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="5dp"
        android:text="1234"
        android:textColor="#000000"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/btnselector"
            android:text="@string/confirm"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/btnselector"
            android:text="@string/Cancel"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>