<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_gameInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btnselector"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/Event"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_main_judge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/btnselector"
        android:gravity="center"
        android:hint="@string/Referee_information"
        android:singleLine="true"
        android:textSize="@dimen/textSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="2"
        android:background="@drawable/athlete"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/numberGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_athleteID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:checked="true"
                android:text="@string/Number" />

            <RadioButton
                android:id="@+id/rb_athleteOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/Serial_number" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/bit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/color_athletes"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Athlete"
                android:textSize="@dimen/textSize" />

            <EditText
                android:id="@+id/et_athlete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1.5"
                android:background="@drawable/main_et_selector"
                android:gravity="center"
                android:numeric="integer"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_main_flag"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/color_athletes"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Time"
                android:textSize="@dimen/textSize" />

            <EditText
                android:id="@+id/et_main_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1.5"
                android:background="@drawable/main_et_selector"
                android:gravity="center"
                android:singleLine="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:visibility="invisible"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1.5"
        android:background="@drawable/red"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:gravity="center"
            android:text="@string/Red"
            android:textSize="@dimen/textSize" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_red_knees"
                android:layout_width="@dimen/fine"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/layout_home"
                android:background="@drawable/btnselector"
                android:text="@string/Genuflex"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_red_soar"
                android:layout_width="@dimen/fine"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/layout_home"
                android:background="@drawable/btnselector"
                android:text="@string/Flight"
                android:textSize="@dimen/textSize" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1.5"
        android:background="@drawable/yellow"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:gravity="center"
            android:text="@string/Yellow"
            android:textSize="@dimen/textSize" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_yellow_knees"
                android:layout_width="@dimen/fine"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/layout_home"
                android:background="@drawable/btnselector"
                android:text="@string/Genuflex"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/btn_yellow_soar"
                android:layout_width="@dimen/fine"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/layout_home"
                android:background="@drawable/btnselector"
                android:text="@string/Flight"
                android:textSize="@dimen/textSize" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_foul_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btnselector"
            android:text="@string/Penalty_list"
            android:textSize="@dimen/textSize" />
    </RelativeLayout>

</LinearLayout>