<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/color_background"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judge"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/et_dialog_judge"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center"
            android:inputType="textVisiblePassword"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
            android:singleLine="true"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/et_dialog_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judge_position"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/et_dialog_stand"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ib_dialog_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/back_selector" />

        <Button
            android:id="@+id/btn_dialog_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/btnselector"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</LinearLayout>